# shogun

./: CMakeLists.txt
doc/cookbook/: README.md
doc/cookbook/source/: index.rst  references.bib
examples/meta/: CMakeLists.txt
examples/meta/cpp/: CMakeLists.txt
examples/meta/csharp/: CMakeLists.txt
examples/meta/java/: CMakeLists.txt
examples/meta/lua/: CMakeLists.txt
examples/meta/octave/: CMakeLists.txt
examples/meta/python/: CMakeLists.txt
examples/meta/r/: CMakeLists.txt
examples/meta/ruby/: CMakeLists.txt
examples/meta/src/classifier/: knn.sg
tests/meta/: CMakeLists.txt  generated_results  reference_results  tester.cpp  tester.py
